deploy/base/cloudflared-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflared
  labels:
    app: cloudflared
spec:
  type: ClusterIP
  selector:
    app: cloudflared
  ports:
    - name: metrics
      port: 2000
      targetPort: metrics
      protocol: TCP
