deploy/base/entrypoint-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entrypoint
  annotations:
    metallb.io/loadBalancerIPs: 192.168.2.204
spec:
  type: LoadBalancer
  selector:
    app: entrypoint
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
